--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
             "Laravel\\Flutterwave\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "require": {
         "php": "^5.6.0|^7.2",
         "illuminate/support": "^5.0|^6.0|^7.0|^8.0",
@@ -27,7 +32,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Laravel\\Flutterwave\\FlutterwaveServiceProvider"
+                "Laravel\\Flutterwave\\RaveServiceProvider"
             ],
             "aliases": {
                 "Rave": "Laravel\\Flutterwave\\Facades\\Rave"
