--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require": {
         "php": "^5.6.0|^7.2",
         "illuminate/support": "^5.0|^6.0|^7.0|^8.0",
-        "mashape/unirest-php": "^3.0|^4.0"
+        "mashape/unirest-php": "^3.0|^4.0",
+        "friendsofphp/php-cs-fixer": "^2.16"
    },
    "require-dev": {
         "phpunit/phpunit" : "^8.3",
@@ -42,7 +43,6 @@
             }
         }
     },
-    "license": "MIT",
     "authors": [
         {
             "name": "Flutterwave Developers",
