--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
     "require": {
         "php": "^5.6.0|^7.2",
         "illuminate/support": "^5.0|^6.0|^7.0|^8.0",
-        "mashape/unirest-php": "^3.0|^4.0",
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "mashape/unirest-php": "^3.0|^4.0"
    },
    "require-dev": {
         "phpunit/phpunit" : "^8.3",
         "scrutinizer/ocular": "^1.1",
         "satooshi/php-coveralls": ">0.7",
         "mockery/mockery": "^1.2",
-        "orchestra/testbench": "^4.0"
+        "orchestra/testbench": "^4.0",
+        "friendsofphp/php-cs-fixer": "^2.16"
     },
     "extra": {
         "laravel": {
