--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kenkioko/flutterwave-laravel-v3",
+    "name": "apxcde/flutterwave-laravel-v3",
     "description": "A Flutterwave's Version 3 Implementation For Laravel",
     "type": "library",
     "version": "1.0.0",
@@ -21,7 +21,7 @@
         }
     },
     "require": {
-        "php": "^5.6.0|^7.2",
+        "php": "^5.6.0|^8.0",
         "illuminate/support": "^5.0|^6.0|^7.0|^8.0",
         "mashape/unirest-php": "^3.0|^4.0"
    },
@@ -30,7 +30,7 @@
         "scrutinizer/ocular": "^1.1",
         "satooshi/php-coveralls": ">0.7",
         "mockery/mockery": "^1.2",
-        "orchestra/testbench": "^4.0",
+        "orchestra/testbench": "^3.0|^4.0|^5.0|^6.0",
         "friendsofphp/php-cs-fixer": "^2.16"
     },
     "extra": {
@@ -52,5 +52,10 @@
             "name": "Kennedy Kioko",
             "email": "kmkioko@gmail.com"
         }
-    ]
+    ],
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
+    }
 }
